KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Cart__c/fields/Applicable_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Discount_Percentage__c</fullName>
    <formula>IF( Total_Amount__c &lt;= 50000, 0.05,  IF(Total_Amount__c &lt;= 100000, 0.10, 0.15) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicable Discount Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>