KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Cart__c/fields/Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount__c</fullName>
    <formula>IF(ISPICKVAL( Approval_Status__c , &apos;Approved&apos;) ,  Total_Amount__c -(( Total_Amount__c /100)* Applicable_Discount_Percentage__c ),  Total_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>