KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Cart__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>