KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Cart__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>IF( ISPICKVAL( Product__c , &apos;Mobile&apos;) , 25000,  IF(ISPICKVAL( Product__c , &apos;Laptop&apos;), 45000, 20000) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>